libraries/ckit/regression/invalid-programs/r16.c
enum X { 
  x1, x2, x3
}

main () {
  int i=1;

  x1 = i;
}
